MES-6138 Candidate Search - Multiple test centres wrapping fix (#137)
* initial commit - some stuff not working

* updated css to align text

* remove ngoninit and console.log

--- a/src/app/pages/test-centre-journal/components/test-centre-name/test-centre-name.scss
+++ b/src/app/pages/test-centre-journal/components/test-centre-name/test-centre-name.scss
@@ -7,6 +7,10 @@
   padding-top: 12px;
 }
 
+.test-centre-padding {
+  padding-left: 17px;
+}
+
 label {
   margin-left: 5px;
 }
